<resources>
    <string name="app_name">Boardgame Stats</string>
    <string name="login_title">Login</string>
    <string name="login_username">Email</string>
    <string name="login_hint_user">Enter your email</string>
    <string name="login_password">Password</string>
    <string name="login_hint_pass">Enter your password</string>
    <string name="login_connect">Login</string>
    <string name="login_register">Create your account here</string>
    <string name="sign_up_title">Sign up</string>
    <string name="sign_up_button">Done</string>
    <string name="title_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_utility">Utilities</string>
    <string name="default_message_home">No games added yet :(</string>
    <string name="change_games_home">Click here to change game´s list</string>
    <string name="change_username">Change username</string>
    <string name="change_password">Change password</string>
    <string name="change_question">Change secret question</string>
    <string name="add_changes">Confirm</string>
    <string name="cancel_changes">Cancel</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="player5">Player 5</string>
    <string name="player6">Player 6</string>
    <string name="player7">Player 7</string>
    <string name="player8">Player 8</string>
    <string name="score">Score</string>
    <string name="position">Position</string>
    <string name="add_game">Add game</string>
    <string name="comments">Comments</string>
    <string name="winner">Winner</string>
    <string name="your_position">Your rank</string>
    <string name="default_message_list">No games played yet :(</string>
    <string name="dice6">6-sided</string>
    <string name="dice12">12-sided</string>
    <string name="dice20">20-sided</string>
    <string name="dice_number">Dices: </string>
    <string name="defeats">Defeats</string>
    <string name="total_games">Total Games</string>
    <string name="delete_game">Delete game</string>
    <string name="_0">0</string>
    <string name="title">title</string>
    <string name="victories">Victories</string>
    <string name="see_matches_s_list">See matches\'s list</string>
    <string name="add_new_match">Add new match</string>
    <string name="no_games">The game´s list is empty.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="did_you_forget_your_password">Did you forget your password?</string>
    <string name="you_will_receive_an_email_with_information_and_a_link_to_reset_your_password">You will receive an email with information and a link to reset your password</string>
    <string name="chronometer_title_activity">Chronometer</string>
    <string name="add">Add</string>
    <string name="choose_one">Choose one:</string>
    <string name="number_1">1</string>
    <string name="subtract">Subtract</string>
    <string name="dice_roll">Dice Roll</string>
    <string name="magic_arena_title">Magic Arena</string>
    <string name="_20">20</string>
    <string name="add_1_magic">+1</string>
    <string name="sub_5_magic">-5</string>
    <string name="sub_1_magic">-1</string>
    <string name="add_5_magic">+5</string>
    <string name="email_account_activity">Email:</string>
    <string name="data_of_your_account_account_activity">Data of your account</string>
    <string name="email_dominio_com_account_activity">email@dominio.com</string>
    <string name="password_account_activity">Password:</string>
    <string name="password_account_activity2">password</string>
    <string name="change_account_activity">Change</string>
    <string name="uid_account_activity">UID:</string>
    <string name="dsnajdksal_k_account_activity">dsnajdksal;k</string>
    <string name="creation_s_date_account_activity">Creation\'s Date:</string>
    <string name="_13_sep_2020_account_activity">13 Sep 2020</string>
    <string name="dice_roll_utilities_activity">Dice Roll</string>
    <string name="magic_arena_utilities_activity">Magic Arena</string>
    <string name="chronometer_utilities_activity">Chronometer</string>
    <string name="score_points_utilities_activity">Score Points</string>
    <string name="utilities_activity">Utilities</string>

</resources>
