<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/draculaBackground"
    tools:context=".UpdateGameView">

    <Button
        android:id="@+id/addNewMatch_guv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_game"
        android:text="@string/add_new_match"
        android:scaleY="0.9"
        android:scaleX="0.9"
        android:textColor="@color/draculaForeground"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/matchesList_guv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteGame_guv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_game"
        android:text="@string/delete_game"
        android:textColor="@color/draculaForeground"
        android:scaleY="0.9"
        android:scaleX="0.9"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/matchesList_guv" />

    <Button
        android:id="@+id/matchesList_guv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleY="0.9"
        android:scaleX="0.9"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_game"
        android:text="@string/see_matches_s_list"
        android:textColor="@color/draculaForeground"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteGame_guv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addNewMatch_guv" />

    <TextView
        android:id="@+id/titleGame_guv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/draculaBackgroundTitle"
        android:fontFamily="@font/roboto_condensed_bold"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/draculaPink"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="296dp"
        android:layout_height="472dp"
        android:background="@drawable/constraint_layout_with_borders"
        app:layout_constraintBottom_toTopOf="@+id/addNewMatch_guv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleGame_guv"
        app:layout_constraintVertical_bias="0.508">

        <TextView
            android:id="@+id/totalMatches_guv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_games"
            android:textColor="@color/draculaYellow"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/totalMatchesCount_guv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalMatchesCount_guv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/draculaForeground"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/victories_guv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalMatches_guv" />

        <TextView
            android:id="@+id/victories_guv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/victories"
            android:textColor="@color/draculaGreen"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/victoriesCount_guv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalMatchesCount_guv" />

        <TextView
            android:id="@+id/victoriesCount_guv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/draculaForeground"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/defeats_guv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/victories_guv" />

        <TextView
            android:id="@+id/defeats_guv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defeats"
            android:textColor="@color/draculaRed"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/defeatsCount_guv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/victoriesCount_guv" />

        <TextView
            android:id="@+id/defeatsCount_guv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/draculaForeground"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/defeats_guv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>