<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGameView">


    <Button
        android:id="@+id/addGame_gav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_game"
        android:text="@string/add_game"
        android:textColor="@color/flatWetAsphalt"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleGame_gav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textColor="@color/Black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="296dp"
        android:layout_height="472dp"
        android:background="@color/flatClouds"
        app:layout_constraintBottom_toTopOf="@+id/addGame_gav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleGame_gav">

        <TextView
            android:id="@+id/totalMatches_gav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_games"
            android:textColor="@color/flatBelizeHole"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/totalMatchesCount_gav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalMatchesCount_gav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/Black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/victories_gav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalMatches_gav" />

        <TextView
            android:id="@+id/victories_gav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/victories"
            android:textColor="@color/flatNephritis"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/victoriesCount_gav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalMatchesCount_gav" />

        <TextView
            android:id="@+id/victoriesCount_gav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/Black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/defeats_gav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/victories_gav" />

        <TextView
            android:id="@+id/defeats_gav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defeats"
            android:textColor="@color/flatPomegrante"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/defeatsCount_gav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/victoriesCount_gav" />

        <TextView
            android:id="@+id/defeatsCount_gav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/Black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/defeats_gav" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>